[package]
authors = ["Jorge Aparicio <jorge@japaric.io>", "Hideki Sekine <sekineh@me.com>"]
categories = ["embedded", "no-std"]
description = "Minimal runtime / startup for Cortex-M microcontrollers"
documentation = "https://docs.rs/cortex-m-rt/"
keywords = ["arm", "cortex-m", "runtime", "startup"]
license = "MIT OR Apache-2.0"
name = "cortex-m-rt"
readme = "README.md"
repository = "https://github.com/rust-embedded/cortex-m-rt"
version = "0.7.0"
autoexamples = true
edition = "2018"

[package.metadata.docs.rs]
features = ["device"]

# [patch.crates-io]
# vcell = { git = "https://github.com/perlindgren/vcell.git" }
# volatile-register = { git = "https://github.com/perlindgren/volatile-register.git" }
# cortex-m = { git = "https://github.com/perlindgren/cortex-m.git", branch = "klee-analysis" }


[dependencies]
r0 = "0.2.2"
cortex-m-rt-macros = { path = "macros", version = "0.1.5" }
panic-abort = "0.3.1"

[dependencies.klee-sys]
version = "0.1.0"
git ="https://gitlab.henriktjader.com/pln/klee-sys"

# just here to force version 3
# [dependencies.volatile-register]
# version = "0.3.0"
# optional = true

# just here to force version 2
# [dependencies.vcell]
# version = "0.2.0"
# optional = true
# panic-abort = "0.3.1"

[dev-dependencies]
cortex-m = "0.6.0"
panic-halt = "0.2.0"
# cortex-m-semihosting = "0.3.1"

# [dev-dependencies.rand]
# default-features = false
# version = "0.5.5"

# [target.'cfg(not(target_os = "none"))'.dev-dependencies]
# compiletest_rs = "0.3.14"

[[example]]
name = "device"
required-features = ["device"]

[features]
device = []
# klee-analysis = ["cortex-m-rt-macros/klee-analysis", "klee/klee-analysis", "cortex-m/klee-analysis", "volatile-register/klee-analysis", "vcell/klee-analysis"]
klee-analysis = []

[profile.dev]
incremental = false
panic = "abort"
lto = true

[profile.release]
debug = true
panic = "abort"
lto = true
