[package]
# Changes to original code
authors = [
    "Per Lindgren <per.lindgren@ltu.se>" 
]

categories = ["embedded", "no-std"]
description = "Minimal runtime / startup for Cortex-M microcontrollers with support to symbolic execution and replay"
keywords = ["arm", "cortex-m", "runtime", "startup", "trustit"]

name = "cortex-m-rt"
readme = "README.md"
version = "0.6.11"
autoexamples = true

[dependencies]
r0 = "0.2.2"
cortex-m-rt-macros = { path = "macros", version = "0.1" }

[dependencies.klee-sys]
version = "0.1.0"
git ="https://gitlab.henriktjader.com/pln/klee-sys"
optional = true

[dependencies.cortex-m]
version = "0.6.1"
optional = true

[dev-dependencies]
panic-halt = "0.2.0"
cortex-m-semihosting = "0.3"
cortex-m = "0.6.1"

[target.'cfg(not(target_os = "none"))'.dev-dependencies]
compiletest_rs = "0.4.0"

[[example]]
name = "device"
required-features = ["device"]

[[test]]
name = "compiletest"
required-features = ["device"]

[patch.crates-io]
vcell = { git = "https://github.com/perlindgren/vcell.git", branch = "trustit" }
cortex-m = { git = "https://github.com/perlindgren/cortex-m.git", branch = "trustit" }

[features]
device = []
klee-analysis = ["klee-sys/klee-analysis", "cortex-m-rt-macros/klee-analysis", "cortex-m/klee-analysis"]
# disable bindings of exception vector and interrupts on replay in cortex-m-rt-macros
klee-replay = ["klee-sys/klee-replay", "cortex-m-rt-macros/klee-analysis", "cortex-m/inline-asm"]
rtpro = []
inline-asm = ["klee-sys/inline-asm"]

[package.metadata.docs.rs]
features = ["device"]
